--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "ts-node-dev -r tsconfig-paths/register src/main.ts",
     "migrate:dev": "prisma migrate dev",
     "generate": "prisma generate",
+    "studio": "prisma studio",
     "build": "tsc",
     "start": "./dist/main.js",
     "test": "vitest",
