--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
     "pino": "^9.5.0",
