--- a/tsconfig.json
+++ b/tsconfig.json
@@ -110,5 +110,6 @@
   "include": [
     "src/**/*",
   ],
+  "exclude": ["node_modules", "dist"],
   "files": ["./src/@types/express/index.d.ts"]
 }
