--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register src/main.ts",
     "migrate:dev": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy",
+    "migrate:status": "prisma migrate status",
     "generate": "prisma generate",
     "studio": "prisma studio",
-    "build": "prisma generate & tsc",
-    "start": "./dist/main.js",
+    "build": "npm run migrate:deploy & tsc",
+    "start": "node dist/main.js",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
