--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "generate": "prisma generate",
     "studio": "prisma studio",
     "build": "npm run migrate:deploy & tsc",
-    "start": "node -r tsconfig-paths/register dist/main.js",
+    "start": "node dist/main.js",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
@@ -42,8 +42,7 @@
     "pino-http": "^10.3.0",
     "reflect-metadata": "^0.2.2",
     "sharp": "^0.33.5",
-    "swagger-ui-express": "^5.0.1",
-    "tsconfig-paths": "^4.2.0"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -59,6 +58,7 @@
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.1.0",
     "vitest": "^2.1.4",
