--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "migrate:status": "prisma migrate status",
     "generate": "prisma generate",
     "studio": "prisma studio",
-    "build": "npm run migrate:deploy & tsc",
+    "build": "npm run migrate:deploy & tsc & tsc-alias",
     "start": "node dist/main.js",
     "test": "vitest",
     "coverage": "vitest run --coverage"
@@ -58,6 +58,7 @@
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.1.0",
