--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,7 +108,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*",
+    "./src",
   ],
   "exclude": ["node_modules", "dist"],
   "files": ["./src/@types/express/index.d.ts"]
