--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "@vitest/coverage-v8": "^2.0.5",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-transform": "^0.7.0",
