--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transform": "^0.7.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
