--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "pino": "^9.5.0",
     "pino-http": "^10.3.0",
     "reflect-metadata": "^0.2.2",
