--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.701.0",
     "@prisma/client": "^5.18.0",
     "@vitest/coverage-v8": "^2.0.5",
     "aws-sdk": "^2.1692.0",
@@ -40,7 +41,6 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
     "pino": "^9.5.0",
     "pino-http": "^10.3.0",
     "reflect-metadata": "^0.2.2",
