--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.701.0",
+    "@mailchimp/mailchimp_transactional": "^1.0.59",
     "@prisma/client": "^5.18.0",
     "@vitest/coverage-v8": "^2.0.5",
     "aws-sdk": "^2.1692.0",
@@ -53,6 +54,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mailchimp__mailchimp_transactional": "^1.0.10",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.7.4",
     "@types/swagger-ui-express": "^4.1.6",
